--- a/IoTLight/app/src/main/res/layout/activity_warning_notification.xml
+++ b/IoTLight/app/src/main/res/layout/activity_warning_notification.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".View.WarnningNotification">
+    tools:context=".View.WarningNotification">
 
     <LinearLayout
         android:layout_width="match_parent"
